 o Applied patch from Jan Fedak to add startup geometry to database 
   parameters.
 o Applied patch from Jan Fedak to fix hotkeys in menus.
 o Applied patch to get AfterStep to change Icon when Title is changing.
   New feel option  - FollowTitleChanges in feel has to be used to enable 
   this feature.
 o Fixed Tile's -h handling.
 o added support for maximization to not exceed screen size, while 
   working with xinerama.
 o man pages fixes.
 o Fixed socket/pipes reading loops to not cause 100% CPU utilization
   under CYGWIN and in some cases even on Unix.
 o Fixed Menus pointer location handling to use coordinates from events 
   and not abuse XQueryPointer. Otherwise menus were behaving strange 
   whenever events were late due to one reason or others.

1.8.9 patch 1 (sasha)
 o Fix X libraries order, to have Xext preceed X11 - causes problems on
   some Solaris systems.
 o fixed two warnings related to time.h   
 o commented out dependency checking to avoid problems for users with old 
   compilers. It is not needed in stable series anyways.
 o Added functionality to WindowsDesk function. If second argument is 
   10000 then first is relative desk number, instead of exact.
 o Implemented Xinerama support. When window is initially placed - it
   will be appropriately moved to not appear in between monitors, unless 
   user requested geometry explicetely.
 o When Xinerama is active, and asetroot is requested to scale or pad 
   background image to the screen size it will use size of the first head
   ( the one with origin of 0,0 ).
 o Implemented separate Feel, Look, Background and Init/Restart functions 
   for different screens in multihead config with no Xinerama.
 o We now read $TMPDIR in order to locate /tmp directory, and falling back 
   to /tmp if envvar is not set.
 o somewhat fixed Align and Pad fields in the Asetroot config parsing.

1.8.8 patch 1 (sasha+allanon)
 o installastheme.pl now uses the first screen depth reported by xdpyinfo